--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -124,7 +124,7 @@ ruby:
         div#dresses-menu
           ul.nav.navbar-nav
             li.normal-item
-              .text.text-back DRESSES
+              .text.text-back CUSTOM MADE DRESSES
               .arrow
                 i.fa.fa-chevron-left
                 .back BACK
@@ -243,7 +243,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#dress-menu-open
-            .text DRESSES
+            .text CUSTOM MADE DRESSES
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#event-menu-open
