--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -7,14 +7,15 @@
 section.container.content-block.home-main-content
   .row
     .main.col-md-7
-      = link_to '/dresses?style%5B%5D=Lace', class: 'media-wrap'
+      = link_to dresses_path(:style => 'Lace'), class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-amazing-lace.jpg', alt: 'AMAZING LACE - Shop our lace dress edit'
       = render 'shared/redesign/tabs_collection'
-      = link_to '/dresses?style%5B%5D=Two+Piece', class: 'media-wrap'
+      = link_to dresses_path(:style => 'Two+Piece'), class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-double-or-nothing.jpg', alt: 'DOUBLE OR NOTHING - Discover our best two-piece styles'
-      = link_to '/getitquick', class: 'media-wrap'
+        fast_making_dresses
+      = link_to fast_making_dresses_path, class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-express-making.png', alt: 'Express making - Dresses made in 48 hours.'
-      = link_to '/bridesmaid-dresses', class: 'media-wrap'
+      = link_to bridesmaid_collection_path, class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-bridesmaid-chic.jpg', alt: 'BRIDESMAID CHIC - Getting it right for your #girlsquad'
 
     aside.col-md-5
