--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -69,7 +69,7 @@ ruby:
 
 .row.rect#rect-new-this-week
   .black-bar
-    a.inner-text href='/dresses/?order=newest' SHOP ALL NEW THIS WEEK
+    = link_to 'SHOP ALL NEW THIS WEEK', dresses_path(:order => 'newest'), class: "inner-text"
   .slideArea
     .containArea
       = react_component('NewThisWeekProducts',{device: 'desktop'}, { prerender: true })
@@ -79,9 +79,9 @@ ruby:
     .col1
       div.head SHOP BY
       div
-        = link_to 'View all dresses', '/dresses' , class: 'no-style-text'
+        = link_to 'View all dresses', dresses_path , class: 'no-style-text'
       div
-        = link_to "What's new", '/dresses/?order=newest', class: 'no-style-text'
+        = link_to "What's new", dresses_path(:order => 'newest'), class: 'no-style-text'
       div
         = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
     .col2
