--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -5,14 +5,20 @@
   .ibox-title
     h3 Actions
   .ibox-content
-    ul.list-unstyled
+    .btn-toolbar
       - possible_events.each do |event_type|
-        li
+        .btn-group
           a.btn.btn-primary data-toggle="modal" href=item_return_build_event_path(item_return_id: @item_return.id, event_type: event_type) data-target="#ajax-modal" = event_type.to_s.titleize
 
 .ibox
   .ibox-title
     h3 Return Request
+  .ibox-content
+    = render :partial => 'payment_info'
+
+.ibox
+  .ibox-title
+    h3 Raw Attributes
   .ibox-content
     = render 'attributes_list', attributes: @item_return.attributes
 
