use another style , fix a error

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -7,10 +7,10 @@
 section.container.content-block.home-main-content
   .row
     .main.col-md-7
-      = link_to dresses_path(:style => 'Lace'), class: 'media-wrap'
+      = link_to build_taxon_path('Lace'), class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-amazing-lace.jpg', alt: 'AMAZING LACE - Shop our lace dress edit'
       = render 'shared/redesign/tabs_collection'
-      = link_to dresses_path(:style => 'Two+Piece'), class: 'media-wrap'
+      = link_to build_taxon_path('Two Piece'), class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-double-or-nothing.jpg', alt: 'DOUBLE OR NOTHING - Discover our best two-piece styles'
         fast_making_dresses
       = link_to fast_making_dresses_path, class: 'media-wrap'
