--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -143,7 +143,7 @@ ruby:
             li.normal-item
               = link_to 'Plus Size', build_taxon_path('Plus Size'), class: 'text'
             li.normal-item
-              = link_to 'Two-Piece', build_taxon_path('Tow Piece'), class: 'text'
+              = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'text'
             li.normal-item
               = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'text'
             li.normal-item
