Fix dresses link again, how many places can it be in?

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -47,7 +47,7 @@ ruby:
 .row#home-menu.hidden-xs.hidden-sm.text-center
   span.new-this-week
     em New this week
-  span.dresses DRESSES
+  span.dresses CUSTOM MADE DRESSES
   span.nested
     ' EVENTS
     ul
