--- a/app/views/checkout/v1/spree/checkout/payment/_gateway.html.slim
+++ b/app/views/checkout/v1/spree/checkout/payment/_gateway.html.slim
@@ -5,16 +5,20 @@ ruby:
   options_hash[:autocomplete] = 'off' if Rails.env.production?
   is_masterpass = current_step.eql?('masterpass')
   if is_masterpass
-    realAccountNumber = @masterpass_data[:card][:accountNumber]
-    accountNumber = '5520000000000000' #realAccountNumber
-    # TODO show only last 4 lettters with *
+    realAccountNumber = '5520000000000000' # @masterpass_data[:card][:accountNumber]
+    # Show only last 4 lettters and others with *
+    accountNumber = realAccountNumber[1..realAccountNumber.length-4].gsub(/[0-9]/, '*') +  realAccountNumber[-4..-1]
   end
 
 .row
   .col-md-12.form-group
     label for="number"  Card number
-    = text_field_tag "#{param_prefix}[number]", '',
-                     options_hash.merge(id: 'number', readonly: is_masterpass, value: is_masterpass ? accountNumber : '')
+    - if is_masterpass
+      = text_field_tag "#{param_prefix}[filtered_number]", accountNumber,
+                       options_hash.merge(id: 'number', readonly: true)
+      = hidden_field_tag "#{param_prefix}[number]", realAccountNumber
+    - else
+      = text_field_tag "#{param_prefix}[number]", '', options_hash.merge(id: 'number')
 .row
   .col-md-12.form-group
     label for="name"  Name on card
