--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -20,7 +20,7 @@
         .checkout-breadcrumbs
           ol.breadcrumb
             - if current_step.eql?('masterpass')
-              li class='active' MasterPass
+              li class='active' MasterPass Confirmation
             - else
               li class=('active' if current_step.eql?('address')) Your information
               li class=('active' if current_step.eql?('payment')) Payment Method
@@ -30,6 +30,9 @@
             = render 'address_step', current_step: current_step
 
         - if current_step.eql?('payment')
+          - content_for :inline_javascript do
+            | window.bill_address = #{ raw ::AddressSerializer.new(current_order.bill_address).to_json };
+
           .checkout-step data-name="payment"
             = render 'payment_step', current_step: current_step
 
