--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -1,4 +1,6 @@
 ruby:
+  shopping_bag_texts = Preferences::ShoppingBag.new(current_site_version)
+
   shopping_cart_summary_init = "
     window.app.shopping_cart_summary = new ShoppingCartSummary({
       cart: window.app.shopping_cart,
@@ -80,3 +82,12 @@ ruby:
 
   p.order-number
     = @order.try(:number)
+
+  .shopping-bag-text-wrapper
+    .row.shopping-bag-text
+      = raw shopping_bag_texts.value_proposition
+
+  .row.shopping-bag-payment-methods
+    img src="/assets/checkout/visa-mastercard-paypal.jpg"
+    img src="/assets/comodo-ssl.png"
+
