--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -212,6 +212,81 @@ $order-summary-bg: #f7f7f9;
 
   // Order / Cart Summary
   .checkout-items {
+
+    .shopping-bag-text-wrapper{
+        background-color: #EEEEEE;
+        padding-bottom:10px;
+        font-weight:500;
+    }
+    @media(max-width:600px){
+      .shopping-bag-text-wrapper{
+        margin-top: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+    }
+    .shopping-bag-text{
+      margin-right:0;
+      padding-top:10px;
+      padding-left:35px
+    }
+    .shopping-bag-text span{
+      float: left;
+    }
+    .shopping-bag-text span:not(:nth-child(2)){
+      float: left;
+      margin-top: 5px;
+    }
+    .shopping-bag-text i.coathanger{
+      background-image: url('cart/coathanger.svg');
+      width: 20px;
+      height: 15px;
+      margin-top: 2px;
+      margin-right: 10px;
+      display: block;
+      float: left;
+      background-size: contain;
+      clear: both;
+    }
+    .shopping-bag-text i.plane{
+      background-image: url('cart/plane.svg');
+      width: 20px;
+      height: 21px;
+      margin-top: 3px;
+      margin-right: 10px;
+      display: block;
+      float: left;
+      background-size: contain;
+      clear: both;
+    }
+    .shopping-bag-text i.mobile{
+      background-image: url('cart/mobile.svg');
+      width: 22px;
+      height: 19px;
+      margin-top: 5px;
+      margin-right: 8px;
+      margin-left: 1px;
+      display: block;
+      float: left;
+      background-size: contain;
+      clear: both;
+    }
+    .shopping-bag-payment-methods {
+      text-align:center;
+      margin-top:20px;
+
+    }
+    .shopping-bag-payment-methods img{
+      width: 35%;
+    }
+
+    .shopping-bag-payment-methods img:last-child{
+      margin-left: 20px;
+    }
+
+
+
+
     $order-summary-border-color: #cccccc;
     background-color: $gray-light-bg;
     border:           0;
