use make a statement path on homepage banner

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,7 +1,7 @@
 .page-content.index
   .media-wrap
     // TODO: create helper for multisource images
-    = link_to make_a_statement_path
+    = link_to make_a_statement_collection_path
       img src='/assets/home-page-tiles/hero-full.jpg' srcset='/assets/home-page-tiles/hero-sml.jpg 768w, /assets/home-page-tiles/hero-med.jpg 1024w, /assets/home-page-tiles/hero-full.jpg 1200w' alt='Bambi'
 
 /! Content Section
