remove hardcoded dresses path

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -131,7 +131,7 @@ ruby:
             li.grey-item
               .text SHOP BY
             li.normal-item
-              a href='/dresses'
+              = link_to dresses_path
                 .text View all dresses
             li.normal-item
               a href='#'
