Add link to order to return show page

--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -14,6 +14,8 @@
   .ibox-title
     h3 Return Request
   .ibox-content
+    h3 Order
+    = link_to @item_return.order_number, spree.admin_order_path(id: @item_return.order_number)
     = render :partial => 'payment_info'
 
 .ibox
