--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -6,6 +6,9 @@
     h3 Actions
   .ibox-content
     .btn-toolbar
+      / TODO - Having all these items reuse the same jQuery ajax modal means you can only click
+      / on one of the items before the content is loaded.
+      / New buttons *don't* load new content via XHR.
       - possible_events.each do |event_type|
         .btn-group
           a.btn.btn-primary data-toggle="modal" href=item_return_build_event_path(item_return_id: @item_return.id, event_type: event_type) data-target="#ajax-modal" = event_type.to_s.titleize
