--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -72,7 +72,7 @@ ruby:
     = link_to 'SHOP ALL NEW THIS WEEK', dresses_path(:order => 'newest'), class: "inner-text"
   .slideArea
     .containArea
-      = react_component('NewThisWeekProducts',{device: 'desktop', site_version: @current_site_version.to_param}, { prerender: true })
+      = react_component('NewThisWeekProducts',{device: 'desktop', site_version: @current_site_version.to_param})
 
 .row.rect#rect-dresses
   .left-area
