restyle header middle section

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -52,6 +52,9 @@
 // Base
 @import 'redesign/base/containers';
 
+// Layout
+@import 'redesign/layout/header';
+
 // Components
 @import 'redesign/components/tabs';
 @import 'redesign/components/media';
