--- a/app/views/layouts/redesign/header/locale_selector/_desktop.html.slim
+++ b/app/views/layouts/redesign/header/locale_selector/_desktop.html.slim
@@ -1,4 +1,4 @@
-#locale-selector-container.col-md-4.text-left
+#locale-selector-container
   #locale-selector-label
     | You're shopping in:
   #locale-selector-current
