--- a/app/assets/stylesheets/_media_queries.css.scss
+++ b/app/assets/stylesheets/_media_queries.css.scss
@@ -1,9 +1,4 @@
 // http://davidwalsh.name/write-media-queries-sass
-
-$tablet-width: 768px;
-$desktop-width: 1024px;
-
-
 @mixin mobile {
   @media (max-width: #{$tablet-width - 1px}) {
     @content;
@@ -18,6 +13,12 @@ $desktop-width: 1024px;
 
 @mixin desktop {
   @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
+
+@mixin mobile-header {
+  @media (max-width: #{$mobile-header - 1px}) {
     @content;
   }
 }
