--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -10,7 +10,7 @@ ruby:
   if masterpass_available?
       shopping_bag_init = shopping_bag_init + ",
         masterpass_link: '#buyWithMasterPass',
-        masterpass_cart_callback_uri: '/masterpass/cart?payment_method_id=" + masterpass_payment_method.id.to_s + "'
+        masterpass_cart_callback_uri: urlWithSitePrefix('/masterpass/cart?payment_method_id=" + masterpass_payment_method.id.to_s + "')
         "
   end
   shopping_bag_init = shopping_bag_init + "});"
