--- a/app/assets/stylesheets/redesign/header/locale_selector.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_selector.css.scss
@@ -27,14 +27,14 @@
   height: 25px;
   padding-top: 4px;
   font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 0.875em;
   div{
     padding-top: 0;
   }
   #account-area{
     .pipe{
-      margin-left: 30px;
-      margin-right: 30px;
+      margin-left: 20px;
+      margin-right: 20px;
     }
     .account-menu{
       z-index: 10;
