[acceptance][specs] fixed other specs

--- a/app/assets/stylesheets/quiz.css.scss
+++ b/app/assets/stylesheets/quiz.css.scss
@@ -6,12 +6,13 @@
 @import 'old_site/partials/icons';
 @import 'old_site/partials/global_elements';
 
-@import 'libs/jquery.jscrollpane';
+@import 'old_site/libs/jquery.jscrollpane';
 
 @import 'redesign/vars';
 @import 'libs/vex.css';
 @import 'libs/vex-theme-flat-attack.css';
 @import 'libs/vex-theme-bottom-right-corner.css';
+@import 'redesign/forms';
 @import 'redesign/modal';
 @import 'redesign/icons';
 
