Make the URL correct :/

--- a/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
+++ b/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
@@ -25,7 +25,7 @@
         var spinner = new Spinner().spin();
         masterpass_overlay.append(spinner.el);
 
-        var masterpass_url = window.location.protocol + window.location.host + "/masterpass/cart?payment_method_id=#{payment_method.id}"
+        var masterpass_url = window.location.protocol + "//"+ window.location.host + "/masterpass/cart?payment_method_id=#{payment_method.id}"
         $.getJSON(masterpass_url).done(
           function(data) {
             spinner.stop();
