--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -13,22 +13,22 @@
         .btn-group
           a.btn.btn-primary data-toggle="modal" href=item_return_build_event_path(item_return_id: @item_return.id, event_type: event_type) data-target="#ajax-modal" = event_type.to_s.titleize
 
-.ibox
-  .ibox-title
-    h3 History
-  .ibox-content.inspinia-timeline
-    .vertical-container.dark-timeline
-      - @item_return.events.order('created_at DESC').each do |event|
-        .timeline-item
-          .row
-            .col-xs-3.date
-              i.fa.fa-calendar
-              span class="vertical-date"
-                => time_ago_in_words(event.occurred_at)
-                | ago
-                small =<> event.occurred_at.to_s
-            .col-xs-7.content.no-top-border
-              p.m-b-xs : strong = event.event_type.to_s.titleize
+/.ibox
+/  .ibox-title
+/    h3 History
+/  .ibox-content.inspinia-timeline
+/    .vertical-container.dark-timeline
+/      - @item_return.events.order('created_at DESC').each do |event|
+/        .timeline-item
+/          .row
+/            .col-xs-3.date
+/              i.fa.fa-calendar
+/              span class="vertical-date"
+/                => time_ago_in_words(event.occurred_at)
+/                | ago
+/                small =<> event.occurred_at.to_s
+/            .col-xs-7.content.no-top-border
+/              p.m-b-xs : strong = event.event_type.to_s.titleize
 
 .ibox
   .ibox-title
@@ -83,7 +83,7 @@
 .ibox
   .ibox-title
     a.collapse-link
-      h5 Full History
+      h5 History
       .ibox-tools
         i.fa.fa-chevron-up
   .ibox-content
