--- a/app/views/checkout/v1/spree/checkout/_address_form.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_form.html.slim
@@ -7,6 +7,7 @@ ruby:
 - if Spree::Config[:address_requires_state]
   ruby:
     states = available_states_for_current_zone
+    address = set_us_default(address)
     have_states = address.country.states.present?
     # copied from instance_tag#tag_id helper method
     sanitized_object_name = form.object_name.gsub(/\]\[|[^-a-zA-Z0-9:.]/, "_").sub(/_$/, "")
@@ -84,7 +85,8 @@ h2.checkout-section-title 2. Address Details
     = form.label :country_id, with_required_mark(t(:country))
     select id=(country_field_id) name="#{form.object_name}[country_id]" class="form-control form-control-md selectbox"
       - available_countries_for_current_zone.each do |country|
-        option selected=(address.country_id == country.id) value=(country.id) data-states-required=(country.states_required ? 'required' : nil)
+        - select_country = (address.country_id == country.id ? true : false )
+        option selected=(select_country) value=(country.id) data-states-required=(country.states_required ? 'required' : nil)
           = country.name
 
 .row
