--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -43,7 +43,7 @@ ruby:
             span.icon.icon-heart
         li.separator
         li
-          a.shopping-bag href='javascript:;'
+          a.js-trigger-shopping-bag href='javascript:;'
             span.copy.js-cart-item-count 0
             span.icon.icon-shopping-bag
 
