updated /wishlist link to = link_to wishlist_path

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -85,7 +85,7 @@ ruby:
           .masthead.pull-right.visible-xs.visible-sm
             ul.toolbar-moodboard-bag.js-header-toolbar
               li
-                a href='/wishlist'
+                = link_to wishlist_path
                   span.copy.js-moodboard-counter 0
                   span.icon.icon-heart
               li.separator
