--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -38,7 +38,7 @@ ruby:
     .right-wrap
       ul.toolbar-moodboard-bag.js-header-toolbar
         li
-          a href='/wishlist'
+          = link_to wishlist_path
             span.copy.js-moodboard-counter 0
             span.icon.icon-heart
         li.separator
